Fix Feedback dialog font on Windows and login path resolution bug (#252)